Fix seed import that not considerates tags, ambit and complex
Basic service reporte changes


Former-commit-id: a4223a23ddcb44fb1a2ec84b013aaf2c03bc5f6e

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2381,7 +2381,7 @@ observatorio.duplicada                                              = Observator
 observatorio.nivel.adecuacion                                       = Nivel de adecuaci\u00F3n estimado
 observatorio.nivel.analisis.1                                       = A
 observatorio.nivel.analisis.2                                       = AA
-observatorio.nivel.cumplimiento                                     = Situaci\u00F3n de cumplimiento estimado
+observatorio.nivel.cumplimiento                                     = Situaci\u00F3n de cumplimiento estimada
 observatorio.nivel.cumplimiento.media.verificacion.p1               = A continuaci\u00F3n se presentan a nivel de sitio web la puntuaci\u00F3n media de cada verificaci\u00F3n agregando los resultados de todas las p\u00E1ginas analizadas, en primer lugar para las verificaciones de nivel de adecuaci\u00F3n A y a continuaci\u00F3n para las verificaciones de nivel de adecuaci\u00F3n AA. Adem\u00E1s de mostrar la situaci\u00F3n actual, tambi\u00E9n se indica la evoluci\u00F3n respecto de la iteraci\u00F3n anterior.
 observatorio.nivel.cumplimiento.media.verificacion.p1.basic.service = A continuaci\u00F3n se presentan a nivel de sitio web la puntuaci\u00F3n media de cada verificaci\u00F3n agregando los resultados de todas las p\u00E1ginas analizadas, en primer lugar para las verificaciones de nivel de adecuaci\u00F3n A y a continuaci\u00F3n para las verificaciones de nivel de adecuaci\u00F3n AA.
 observatorio.nivel.cumplimiento.media.verificacion.p2               = El eje X de las gr\u00E1ficas representa cada una de las verificaciones analizadas en un nivel de adecuaci\u00F3n, y el eje Y presenta la Puntuaci\u00F3n Media de Verificaci\u00F3n (PMV) obtenida agregando los resultados de todas las p\u00E1ginas analizadas. Aquellas verificaciones con una puntuaci\u00F3n m\u00E1s baja son las que presentan mayores problemas de accesibilidad y sobre las cu\u00E1les habr\u00E1 que concentran los esfuerzos de mejora. Los valores "NP - No punt\u00FAa" indican que no hay ning\u00FAn elemento de ese tipo analizable en la muestra y por lo tanto no suponen problemas de accesibilidad.
@@ -2391,6 +2391,7 @@ observatorio.nivel.cumplimiento.media.verificacion.pagina.title     = Puntuaci\u
 observatorio.nivel.cumplimiento.media.verificacion.title            = Puntuaci\u00F3n media de verificaci\u00F3n a nivel de sitio web
 observatorio.nivel.cumplimiento.media.verificacion.title.level1     = Puntuaciones medias de verificaciones. Nivel A
 observatorio.nivel.cumplimiento.media.verificacion.title.level2     = Puntuaciones medias de verificaciones. Nivel AA
+observatorio.nivel.cumplimiento.p1.grafica                          = A continuaci\u00F3n se muestra la distribuci\u00F3n de p\u00E1ginas seg\u00FAn el nivel de adecuaci\u00F3n estimado (No v\u00E1lido, A o AA)
 observatorio.no.resultados                                          = El observatorio seleccionado no tiene resultados.
 observatorio.posicion.global                                        = Posici\u00F3n a nivel global
 observatorio.posicion.segmento                                      = Posici\u00F3n a nivel del segmento '{0}'
@@ -2582,14 +2583,19 @@ pdf.accessibility.info                                         = Observaci\u00F3
 pdf.accessibility.info.estimated                               = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019.\n  \nEste documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
 pdf.accessibility.infos                                        = Observaciones
 pdf.accessibility.intro.how.p1                                 = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. El archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo html, el archivo css y las referencias de la p\u00E1gina en cuesti\u00F3n. 
-pdf.accessibility.intro.how.p1.basic.service                   = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. Cuando el informe solicitado es de Sitio web o de Listado de p\u00E1ginas, el archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo html, el archivo css y las referencias de la p\u00E1gina en cuesti\u00F3n. Cuando el informe solicitado es de C\u00F3digo fuente, el archivo contiene el archivo que el usuario ha enviado al servicio de diagn\u00F3stico, con el mismo nombre con el que el usuario lo envi\u00F3.
-pdf.accessibility.intro.how.p1.basic.service.bold              = c\u00F3digo_fuente.zip
+pdf.accessibility.intro.how.p1.basic.service                   = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. Cuando el informe solicitado es de {1} o de {2}, el archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo html, el archivo css y las referencias de la p\u00E1gina en cuesti\u00F3n. Cuando el informe solicitado es de {3}, el archivo contiene el archivo que el usuario ha enviado al servicio de diagn\u00F3stico, con el mismo nombre con el que el usuario lo envi\u00F3.
+pdf.accessibility.intro.how.p1.basic.service.bold1             = c\u00F3digo_fuente.zip
+pdf.accessibility.intro.how.p1.basic.service.bold2             = Sitio web
+pdf.accessibility.intro.how.p1.basic.service.bold3             = Listado de p\u00E1ginas
+pdf.accessibility.intro.how.p1.basic.service.bold4             = C\u00F3digo fuente
 pdf.accessibility.intro.how.p1.bold                            = c\u00F3digo_fuente.zip
 pdf.accessibility.intro.how.p2                                 = A continuaci\u00F3n, se detalla c\u00F3mo est\u00E1 organizado el informe actual.
 pdf.accessibility.intro.how.p3                                 = En primer lugar, el apartado [anchor1] muestra a t\u00EDtulo informativo los datos con los que el Observatorio ha categorizado al sitio web analizado, en cuanto a complejidad, tem\u00E1tica, distribuci\u00F3n geogr\u00E1fica, recurrencia en el an\u00E1lisis de la semilla (fija, a analizar en a\u00F1os pares o a analizar en a\u00F1os impares), as\u00ED como si el sitio web ha sido destacado desde el colectivo de las asociaciones de personas con discapacidad.
 pdf.accessibility.intro.how.p3.anchor1.text                    = 2. Detalles del sitio web analizado
 pdf.accessibility.intro.how.p3.anchor1.url                     = anchor_detalle_sitio_web
 pdf.accessibility.intro.how.p3.basic.service                   = En primer lugar, en funci\u00F3n del tipo de an\u00E1lisis solicitado (C\u00F3digo fuente o Sitio Web / Conjunto de URLs), lista , el "apartado 2" ser\u00E1 "2. C\u00F3digo fuente analizado" o "2. Muestra de p\u00E1ginas".
+pdf.accessibility.intro.how.p3.merge.source.code.basic.service = En primer lugar, en funci\u00F3n del tipo de an\u00E1lisis solicitado (C\u00F3digo fuente o Sitio Web / Conjunto de URLs), lista , el "apartado 2" ser\u00E1 "2. C\u00F3digo fuente analizado" o "2. Muestra de p\u00E1ginas". El apartado [anchor1] indica el nombre del fichero de c\u00F3digo fuente analizado. El apartado {0} indica el listado de p\u00E1ginas web analizadas, cuyo n\u00FAmero var\u00EDa en funci\u00F3n de la complejidad del sitio web.
+pdf.accessibility.intro.how.p3.merge.url.basic.service         = En primer lugar, en funci\u00F3n del tipo de an\u00E1lisis solicitado (C\u00F3digo fuente o Sitio Web / Conjunto de URLs), lista , el "apartado 2" ser\u00E1 "2. C\u00F3digo fuente analizado" o "2. Muestra de p\u00E1ginas". El apartado {0} indica el nombre del fichero de c\u00F3digo fuente analizado. El apartado [anchor1] indica el listado de p\u00E1ginas web analizadas, cuyo n\u00FAmero var\u00EDa en funci\u00F3n de la complejidad del sitio web.
 pdf.accessibility.intro.how.p4                                 = A continuaci\u00F3n, el apartado [anchor1] indica el listado de p\u00E1ginas web analizadas, cuyo n\u00FAmero var\u00EDa en funci\u00F3n de la complejidad del sitio web.
 pdf.accessibility.intro.how.p4.anchor1.text                    = 3. Muestra de p\u00E1ginas
 pdf.accessibility.intro.how.p4.anchor1.url                     = anchor_muestra_paginas
@@ -2627,7 +2633,7 @@ pdf.accessibility.intro.how.p8.basic.service                   = En funci\u00F3n
 pdf.accessibility.intro.how.p8.basic.service.anchor1.text      = Resultados: P\u00E1gina X
 pdf.accessibility.intro.how.p8.basic.service.anchor1.url       = anchor_resultados_page_1
 pdf.accessibility.intro.how.title                              = C\u00F3mo utilizar el informe 
-pdf.accessibility.intro.info                                   = Este documento NO constituye el \u201CInforme de revisi\u00F3n de la accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
+pdf.accessibility.intro.info                                   = Los datos reflejados son ESTIMATIVOS. Para conocer la situaci\u00F3n REAL es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019.
 pdf.accessibility.intro.next.basic.service.list.1              = {0} indicados en este informe, en el apartado 'Incidencias' de cada p\u00E1gina {1} [anchor1].
 pdf.accessibility.intro.next.basic.service.list.1.anchor1.text = comunidad de accesibilidad
 pdf.accessibility.intro.next.basic.service.list.1.anchor1.url  = http://administracionelectronica.gob.es/comunidades/accesibilidad
@@ -2712,6 +2718,7 @@ pdf.accessibility.priority.incidence                           = Incidencias Por
 pdf.accessibility.problem                                      = Problema
 pdf.accessibility.problems                                     = Problemas
 pdf.accessibility.sample.p1                                    = Teniendo en cuenta la complejidad del sitio web, a continuaci\u00F3n se detalla la muestra de p\u00E1ginas incluidas en el presente an\u00E1lisis
+pdf.accessibility.sample.p1.list                               = A continuaci\u00F3n se detalla le conjunto de p\u00E1ginas incluidas en el presente an\u00E1lisis.
 pdf.accessibility.sample.title                                 = Muestra de p\u00E1ginas
 pdf.accessibility.seed.detail.p1                               = El sitio web analizado est\u00E1 etiquetado de la siguiente manera en el Observatorio de Accesibilidad Web:
 pdf.accessibility.seed.detail.tabla.ambito                     = \u00C1mbito gubernamental\n
@@ -2725,7 +2732,8 @@ pdf.accessibility.seed.detail.title                            = Detalles del si
 pdf.accessibility.subtitle                                     = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
 pdf.accessibility.summary.info                                 = Los datos reflejados son ESTIMATIVOS. Para conocer la situaci\u00F3n REAL es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019.
 pdf.accessibility.title                                        = INFORME DE\nACCESIBILIDAD WEB
-pdf.accessibility.title.basic.service                          = INFORME DE\nACCESIBILIDAD WEB\nSEGUIMIENTO SIMPLIFICADO UNE-EN301549:2019
+pdf.accessibility.title.basic.service                          = INFORME DE\nACCESIBILIDAD WEB
+pdf.accessibility.title.basic.service.2                        = SEGUIMIENTO SIMPLIFICADO UNE-EN301549:2019
 pdf.accessibility.warning                                      = Advertencia
 pdf.accessibility.warnings                                     = Advertencias
 pdf.error.no.results                                           = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
