--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -266,10 +266,12 @@ cargar.semilla.inalterables.title            = Inalteradas
 cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
 cargar.semilla.observatorio.activa           = Activa
+cargar.semilla.observatorio.ambito           = \u00C1mbito
 cargar.semilla.observatorio.categoria        = Segmento
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
+cargar.semilla.observatorio.etiquetas        = Etiquetas
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
 cargar.semilla.observatorio.nombre           = Nombre
@@ -1462,12 +1464,12 @@ nueva.semilla.ip.puertos                   = Puertos:
 nueva.semilla.ip.title                     = Rango de IP
 nueva.semilla.observatorio.acronimo        = Acr\u00F3nimo
 nueva.semilla.observatorio.activa          = Activa
-nueva.semilla.observatorio.eliminada        = Eliminada
+nueva.semilla.observatorio.ambito          = Ambito
 nueva.semilla.observatorio.categoria       = Segmento
-nueva.semilla.observatorio.directorio = Directorio
 nueva.semilla.observatorio.complejidad     = Complejidad
 nueva.semilla.observatorio.dependencia     = Depende de
-nueva.semilla.observatorio.ambito   = Ambito
+nueva.semilla.observatorio.directorio      = Directorio
+nueva.semilla.observatorio.eliminada       = Eliminada
 nueva.semilla.observatorio.etiqueta        = Etiqueta
 nueva.semilla.observatorio.in.directory    = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre          = Nombre Semilla
