Button to remove data from tanalisis, tanalisis_css and tincidencias seems to work fine.
Former-commit-id: d8e085ec65f293044da4c3e1a5cad0de41863279

--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -933,6 +933,7 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
+mensaje.exito.tabla.reducida 								  = Tablas reducida con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
@@ -972,6 +973,8 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.etiquetas                         = Etiquetas
 menu.config.etiquetas.title                   = Etiquetas asociadas a semillas
+menu.config.plantillas.title               = Plantillas asociadas a semillas
+menu.config.reducirtablas.title               = Reduccion tablas observatorio
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
@@ -1090,6 +1093,7 @@ migas.eliminar.usuario                                   = Eliminar Usuario
 migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
 migas.etiquetas.observatorio                             = Etiquetas
+migas.reducirtablas.observatorio                         = Reducir tablas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
 migas.graficas.rastreo                                   = Gr\u00E1ficas rastreo
