--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -657,7 +657,9 @@ gestion.complejidades.observatorio          = Gesti\u00F3n de Complejidades del 
 gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del Observatorio
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
+gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
+gestion.reducirtablas.observatorio.titulo       = Reducci\u00F3n de Tablas del Observatorio
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
@@ -948,6 +950,7 @@ mensaje.exito.cuenta.usuario.eliminado                        = Cuenta Cliente E
 mensaje.exito.dependencia.eliminada                           = Dependencia eliminada con \u00E9xito.
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
+mensaje.exito.tabla.reducida 								  = Tablas reducida con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
@@ -990,12 +993,14 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.etiquetas                         = Etiquetas
 menu.config.etiquetas.title                   = Etiquetas asociadas a semillas
+menu.config.plantillas.title               = Plantillas asociadas a semillas
+menu.config.reducirtablas.title               = Reduccion tablas observatorio
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
 menu.config.plantillas                        = Plantillas
-
+menu.config.reducirtablas                        = Reduccion de tablas
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
 menuSemillas.introducir        = Introducir Semillas
 menuSemillas.listado.webs      = Listado de Webs
@@ -1110,6 +1115,7 @@ migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
 migas.estado.observatorio                                = Estado del observatorio
 migas.etiquetas.observatorio                             = Etiquetas
+migas.reducirtablas.observatorio                         = Reducir tablas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
 migas.graficas.rastreo                                   = Gr\u00E1ficas rastreo
