--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -933,8 +933,9 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.complejidad.eliminada                           = Complejidad eliminada con \u00E9xito.
 mensaje.exito.complejidad.generada                            = Complejidad generada con \u00E9xito.
-mensaje.exito.etiqueta.eliminada                           = Etiqueta eliminada con \u00E9xito.
-mensaje.exito.etiqueta.generada                            = Etiqueta generada con \u00E9xito.
+mensaje.exito.etiqueta.eliminada                           	  = Etiqueta eliminada con \u00E9xito.
+mensaje.exito.etiqueta.generada                            	  = Etiqueta generada con \u00E9xito.
+mensaje.exito.tabla.reducida 								  = Tablas reducida con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
@@ -974,6 +975,8 @@ menu.config.complejidades                     = Complejidades
 menu.config.complejidades.title               = Complejidades asociadas a semillas
 menu.config.etiquetas                     = Etiquetas
 menu.config.etiquetas.title               = Etiquetas asociadas a semillas
+menu.config.plantillas.title               = Plantillas asociadas a semillas
+menu.config.reducirtablas.title               = Reduccion tablas observatorio
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
@@ -1067,6 +1070,7 @@ migas.cuentas.cliente                                    = Cuentas Cliente
 migas.dependencias.observatorio                          = Dependencias
 migas.complejidades.observatorio                         = Complejidades
 migas.etiquetas.observatorio                         = Etiquetas
+migas.reducirtablas.observatorio                         = Reducir tablas
 migas.desinstalar.cartucho                               = Desinstalar Cartucho
 migas.diagnostico                                        = Servicio de Diagn\u00F3stico
 migas.edit.file.malware                                  = Editar fichero
