--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2488,6 +2488,7 @@ observatory.graphic.percentage                                          = Porcen
 observatory.graphic.portales                                            = Portales
 observatory.graphic.puntuation                                          = Puntuaci\u00F3n
 observatory.graphic.score.by.page.label                                 = P\u00E1gina {0}
+observatory.graphic.score.by.page.label.extended                        = Resultados: P\u00E1gina {0}
 observatory.graphic.score.by.page.title                                 = Puntuaci\u00F3n y Adecuaci\u00F3n por P\u00E1gina
 observatory.graphic.segment.aspect.mid.title                            = Comparaci\u00F3n de Medias orientadas a Aspectos: {0}
 observatory.graphic.site.number                                         = N\u00BA Portales: 
