--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -3525,3 +3525,4 @@ minhap.observatory.5_0.subgroup.2.3  = 2.3 Maquetaci\u00F3n adaptable
 minhap.observatory.5_0.subgroup.2.4  = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
 minhap.observatory.5_0.subgroup.2.5  = 2.5 Independencia del dispositivo
 minhap.observatory.5_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
+observatory.graphic.score.by.page.label.extended                             = Resultados: P\u00E1gina {0}
