--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -260,6 +260,7 @@ caracteres.prohibidos = No se pueden usar caract\u00E9res ilegales. S\u00F3lo al
 cargar.observatorio.vacio                 = Volver
 cargar.rastreos.vacio                     = Volver
 cargar.semilla.observatorio.activa        = Activa
+cargar.semilla.observatorio.eliminada = Eliminada
 cargar.semilla.observatorio.acronimo = Acr\u00F3nimo
 cargar.semilla.observatorio.dependencia = Dependencia
 cargar.semilla.observatorio.urls = URLs
