--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -267,6 +267,7 @@ cargar.semilla.observatorio.categoria        = Segmento
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
+cargar.semilla.observatorio.eliminada        = Eliminada
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
 cargar.semilla.observatorio.nombre           = Nombre
@@ -936,7 +937,6 @@ mensaje.exito.dependencia.eliminada                           = Dependencia elim
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
-mensaje.exito.tabla.reducida 								  = Tablas reducida con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
 mensaje.exito.observatorio                                    = Nuevo Observatorio creado con \u00E9xito.
@@ -962,6 +962,7 @@ mensaje.exito.semilla.generada                                = Semilla generada
 mensaje.exito.semilla.modificada                              = La semilla ha sido modificada con \u00E9xito.
 mensaje.exito.semilla.observatorio.eliminada                  = Se ha eliminado el rastreo asociado a la semilla elegida y los resultados de este.
 mensaje.exito.subir.cartucho                                  = Cartucho Subido con exito. 
+mensaje.exito.tabla.reducida                                  = Tablas reducida con \u00E9xito.
 mensaje.exito.termino.categoria.editado                       = T\u00E9rmino categor\u00EDa Editado con exito.
 mensaje.exito.termino.categoria.eliminado                     = T\u00E9rmino categor\u00EDa Eliminado con exito.
 mensaje.exito.termino.categoria.insertado                     = T\u00E9rmino categor\u00EDa Insertado con exito.
@@ -976,12 +977,12 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.etiquetas                         = Etiquetas
 menu.config.etiquetas.title                   = Etiquetas asociadas a semillas
-menu.config.plantillas.title               = Plantillas asociadas a semillas
-menu.config.reducirtablas.title               = Reduccion tablas observatorio
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
+menu.config.plantillas.title                  = Plantillas asociadas a semillas
+menu.config.reducirtablas.title               = Reduccion tablas observatorio
 
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
 menuSemillas.introducir        = Introducir Semillas
@@ -1096,7 +1097,6 @@ migas.eliminar.usuario                                   = Eliminar Usuario
 migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
 migas.etiquetas.observatorio                             = Etiquetas
-migas.reducirtablas.observatorio                         = Reducir tablas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
 migas.graficas.rastreo                                   = Gr\u00E1ficas rastreo
@@ -1184,6 +1184,7 @@ migas.rastreos.realizados.detalle                        = Detalle
 migas.rastreos.realizados.enlaces.rotos                  = Enlaces rotos
 migas.rastreos.realizados.resultados                     = Resultados
 migas.rastreos.realizados.url.analizadas                 = Url analizadas
+migas.reducirtablas.observatorio                         = Reducir tablas
 migas.resultado.observatorio                             = Resultados
 migas.resultado.observatorio.confirmacion.lanzar.semilla = Lanzar Semilla
 migas.resultado.rastreos.realizados.observatorio         = Ejecuciones
