--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -271,6 +271,7 @@ cargar.semilla.observatorio.categoria        = Segmento
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
 cargar.semilla.observatorio.directorio       = Directorio
+cargar.semilla.observatorio.eliminada        = Eliminada
 cargar.semilla.observatorio.etiquetas        = Etiquetas
 cargar.semilla.observatorio.exportar.todo    = Exportar
 cargar.semilla.observatorio.importar.todo    = Importar
@@ -659,10 +660,10 @@ gestion.complejidades.observatorio          = Gesti\u00F3n de Complejidades del 
 gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del Observatorio
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
-gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
-gestion.reducirtablas.observatorio.titulo       = Reducci\u00F3n de Tablas del Observatorio
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
+gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
+gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
 gestion.semillas                            = Gesti\u00F3n de Semillas
@@ -952,7 +953,6 @@ mensaje.exito.cuenta.usuario.eliminado                        = Cuenta Cliente E
 mensaje.exito.dependencia.eliminada                           = Dependencia eliminada con \u00E9xito.
 mensaje.exito.dependencia.generada                            = Dependencia generada con \u00E9xito.
 mensaje.exito.etiqueta.eliminada                              = Etiqueta eliminada con \u00E9xito.
-mensaje.exito.tabla.reducida 								  = Tablas reducida con \u00E9xito.
 mensaje.exito.etiqueta.generada                               = Etiqueta generada con \u00E9xito.
 mensaje.exito.nueva.cuenta                                    = Nueva Cuenta Cliente creada con \u00E9xito.
 mensaje.exito.nueva.cuenta.error.job                          = Se ha creado con \u00E9xito la nueva cuenta de cliente, pero ha fallado la programaci\u00F3n de los rastreos.
@@ -981,6 +981,7 @@ mensaje.exito.semilla.generada                                = Semilla generada
 mensaje.exito.semilla.modificada                              = La semilla ha sido modificada con \u00E9xito.
 mensaje.exito.semilla.observatorio.eliminada                  = Se ha eliminado el rastreo asociado a la semilla elegida y los resultados de este.
 mensaje.exito.subir.cartucho                                  = Cartucho Subido con exito. 
+mensaje.exito.tabla.reducida                                  = Tablas reducida con \u00E9xito.
 mensaje.exito.termino.categoria.editado                       = T\u00E9rmino categor\u00EDa Editado con exito.
 mensaje.exito.termino.categoria.eliminado                     = T\u00E9rmino categor\u00EDa Eliminado con exito.
 mensaje.exito.termino.categoria.insertado                     = T\u00E9rmino categor\u00EDa Insertado con exito.
@@ -995,14 +996,15 @@ menu.config.dependencias                      = Dependencias
 menu.config.dependencias.title                = Dependencias asociadas a semillas
 menu.config.etiquetas                         = Etiquetas
 menu.config.etiquetas.title                   = Etiquetas asociadas a semillas
-menu.config.plantillas.title               = Plantillas asociadas a semillas
-menu.config.reducirtablas.title               = Reduccion tablas observatorio
 menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
 menu.config.plantillas                        = Plantillas
-menu.config.reducirtablas                        = Reduccion de tablas
+menu.config.plantillas.title                  = Plantillas asociadas a semillas
+menu.config.reducirtablas                     = Reduccion de tablas
+menu.config.reducirtablas.title               = Reduccion tablas observatorio
+
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
 menuSemillas.introducir        = Introducir Semillas
 menuSemillas.listado.webs      = Listado de Webs
@@ -1117,7 +1119,6 @@ migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
 migas.estado.observatorio                                = Estado del observatorio
 migas.etiquetas.observatorio                             = Etiquetas
-migas.reducirtablas.observatorio                         = Reducir tablas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
 migas.graficas.rastreo                                   = Gr\u00E1ficas rastreo
@@ -1207,6 +1208,7 @@ migas.rastreos.realizados.detalle                        = Detalle
 migas.rastreos.realizados.enlaces.rotos                  = Enlaces rotos
 migas.rastreos.realizados.resultados                     = Resultados
 migas.rastreos.realizados.url.analizadas                 = Url analizadas
+migas.reducirtablas.observatorio                         = Reducir tablas
 migas.resultado.observatorio                             = Resultados
 migas.resultado.observatorio.confirmacion.lanzar.semilla = Lanzar Semilla
 migas.resultado.rastreos.realizados.observatorio         = Ejecuciones
