--- a/intavcore/src/test/resources/crawler.properties
+++ b/intavcore/src/test/resources/crawler.properties
@@ -166,7 +166,8 @@ chart.lenox.graphic.colors = {15,91,255},{255,225,0},{225,18,13}
 chart.evolution.inteco.red.colors = {225,18,13}
 chart.evolution.mp.green.color = {126,154,64}
 chart.observatory.graphic.modality.colors = {38,187,8},{225,18,13}
-chart.observatory.graphic.compilance.colors = {225,18,13},{38,187,8}, {220,220,220}
+#chart.observatory.graphic.compilance.colors = {225,18,13},{38,187,8}, {220,220,220}
+chart.observatory.graphic.compilance.colors = {220,220,220},{225,18,13},{38,187,8}
 
 max.lenox.context = 10
 lenox.report.pagination = 20
