--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2484,7 +2484,7 @@ observatory.graphic.score.by.page.label.extended                             = R
 observatory.graphic.score.by.page.table.title                                = Verificaciones. Nivel de adecuaci\u00F3n {0}
 observatory.graphic.score.by.page.title                                      = Puntuaci\u00F3n media y Nivel de adecuaci\u00F3n estimado de p\u00E1gina
 observatory.graphic.segment.aspect.mid.title                                 = Comparaci\u00F3n de Medias orientadas a Aspectos: {0}
-observatory.graphic.site.number                                              = N\u00BA Portales: 
+observatory.graphic.site.number                                              = N\u00BA sitios web: 
 observatory.graphic.term                                                     = T\u00E9rminos: 
 observatory.graphic.term.number                                              = N\u00BA T\u00E9rminos: 
 observatory.graphic.verification                                             = Verificaci\u00F3n
