Agrregatte report UNE 2019 improvments
Former-commit-id: d48f42648a2c164505ac2dedd359855ac120647e

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1506,7 +1506,7 @@ nuevo.observatorio.amplitud                   = Amplitud
 nuevo.observatorio.cartucho                   = Cartucho
 nuevo.observatorio.categoria                  = Segmento asociado
 nuevo.observatorio.fecha.inicio               = Fecha inicio
-nuevo.observatorio.fecha.legend               = Datos de la fecha de lanzamiento
+nuevo.observatorio.fecha.legend               = Datos de la siguiente iteraci\u00F3n
 nuevo.observatorio.hora.inicio                = Hora
 nuevo.observatorio.lenguaje                   = Lenguaje
 nuevo.observatorio.lista.no.rastreable        = Lista No Rastreable
