--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -2425,7 +2425,7 @@ observatory.graphic.accessibility.evolution.approval.NV.title                = E
 observatory.graphic.accessibility.level.allocation.by.page.title             = Distribuci\u00F3n de p\u00E1ginas seg\u00FAn el Nivel de adecuaci\u00F3n estimado
 observatory.graphic.accessibility.level.allocation.name                      = DistribucionNivelAccesibilidadGlobal
 observatory.graphic.accessibility.level.allocation.segment.name              = DistribucionNivelAccesibilidadS{0}
-observatory.graphic.accessibility.level.allocation.segment.title             = Distribuci\u00F3n del Nivel de Cumplimiento. {0}
+observatory.graphic.accessibility.level.allocation.segment.title             = Nivel de adecuaci\u00F3n estimado: {0}
 observatory.graphic.accessibility.level.allocation.title                     = Distribuci\u00F3n del Nivel de accesibilidad global
 observatory.graphic.accessibility.level.compilance.segment.name              = DistribucionNivelCumplimientoS{0}
 observatory.graphic.aspect.mid.name                                          = ComparacionMediasAspectos
