--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2430,16 +2430,17 @@ observatory.graphic.accessibility.evolution.approval.NV.title                 = 
 observatory.graphic.accessibility.level.allocation.by.page.title              = Distribuci\u00F3n de p\u00E1ginas seg\u00FAn el Nivel de adecuaci\u00F3n estimado
 observatory.graphic.accessibility.level.allocation.name                       = DistribucionNivelAccesibilidadGlobal
 observatory.graphic.accessibility.level.allocation.segment.name               = DistribucionNivelAccesibilidadS{0}
-observatory.graphic.accessibility.level.allocation.segment.title              = Distribuci\u00F3n del Nivel de Cumplimiento. {0}
+observatory.graphic.accessibility.level.allocation.segment.title              = Nivel de adecuaci\u00F3n estimado: {0}
 observatory.graphic.accessibility.level.allocation.title                      = Nivel de adecuaci\u00F3n estimado global
 observatory.graphic.accessibility.level.compilance.segment.name               = DistribucionNivelCumplimientoS{0}
+observatory.graphic.accessibility.level.compilance.segment.title              = Situaci\u00F3n de cumplimiento estimada: {0}
 observatory.graphic.aspect.mid.name                                           = ComparacionMediasAspectos
 observatory.graphic.aspect.mid.title                                          = Comparaci\u00F3n de Medias orientadas a Aspectos
 observatory.graphic.aspects                                                   = Aspectos
-observatory.graphic.compilance.by.verification.level.1.category.title         = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n: {0}. A
+observatory.graphic.compilance.by.verification.level.1.category.title         = Conformidad de Verificaci\u00F3n: {0}. Nivel de adecuaci\u00F3n A
 observatory.graphic.compilance.by.verification.level.1.name                   = ComparacionCumplimientoVerificacionI
 observatory.graphic.compilance.by.verification.level.1.title                  = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n. A
-observatory.graphic.compilance.by.verification.level.2.category.title         = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n: {0}. AA
+observatory.graphic.compilance.by.verification.level.2.category.title         = Conformidad de Verificaci\u00F3n: {0}. Nivel de adecuaci\u00F3n AA
 observatory.graphic.compilance.by.verification.level.2.name                   = ComparacionCumplimientoVerificacionII
 observatory.graphic.compilance.by.verification.level.2.title                  = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n. AA
 observatory.graphic.compilance.gray                                           = No aplica
@@ -2468,7 +2469,7 @@ observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = 
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
 observatory.graphic.global.puntuation.compilance.segments.mark.title          = Situaci\u00F3n de cumplimiento estimada por segmento
 observatory.graphic.mark.allocation.segment.name                              = DistribucionPuntuacionesS{0}
-observatory.graphic.mark.allocation.segment.title                             = Distribuci\u00F3n de Puntuaciones: {0}
+observatory.graphic.mark.allocation.segment.title                             = Puntuaci\u00F3n media de los sitios web: {0}
 observatory.graphic.mid.puntuation                                            = Puntuaciones Medias de Resultados
 observatory.graphic.modality.by.verification.level.1.category.title           = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n: {0}. A
 observatory.graphic.modality.by.verification.level.1.name                     = ComparacionModalidadVerificacionI
